<resources>
    <string name="app_name">My valet</string>
    <string name="tvBtnLog">Sign in</string>
    <string name="tvBtnLocalWatcher">Watcher</string>
    <string name="tvBtnMyAlerts">My alerts</string>
    <string name="tvBtnAlert">Alert</string>
    <string name="tvBtnParkingConformity">My parking</string>
    <string name="tvBtnRememberParking">Save my position</string>
    <string name="tvBtnParkingSpots">Parking spots</string>
    <string name="btnSignText">SIGN IN</string>
    <string name="btnGoogleSignText">Sign with google</string>
    <string name="tvSignInHeader">LOGIN TO YOUR ACCOUNT</string>
    <string name="etUsernameHint">Enter your username</string>
    <string name="etPasswordHint">Enter your password</string>
    <string name="tvRegisterHeader">Join our community</string>
    <string name="etNameHint">Name</string>
    <string name="etFirstNameHint">First name</string>
    <string name="etPasswordConfirmHint">Confirm password</string>
    <string name="etPhoneHint">tel. number</string>
    <string name="etEmailHint">Email</string>
    <string name="btnRegisterText">REGISTER</string>
    <string name="tabSigInTitleText">SIGN-IN</string>
    <string name="tabRegisterTitleText">REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_explanation">
        Notify your fellow citizen for his car parked in forbidden area and receive payements in the form of tipping
        as well as his eternal gratitude
    </string>


</resources>
